transfer filter`s parameters in url query
